# point-track

./: .gitignore  CMakeLists.txt  components.md  config-processing.py  gnss-config.txt  processed.txt  pygpsconfig-20250127232527.ubx  sdkconfig  test-out.txt
device/: CMakeLists.txt  device.c  testing.c  testing.h
esp-arduino/: build.ps1  build.sh  esp-arduino.ino  peripherals.h  peripherals.ino  race_setup.h  race_setup.ino  wireless.h  wireless.ino
point-track-server/: Cargo.toml  create-db.sql  new-posts.csv  point-track.db
point-track-server/css/: button.css  control-panel.css  login.css  new-boat.css
point-track-server/js/: control-panel.js
point-track-server/src/: db_interface.rs  forms.rs  main.rs  results.rs
point-track-server/templates/: control-panel.html  login.html  register.html  result-table.html
test/: test.ino
